--- a/homework1.css
+++ b/homework1.css
@@ -1,16 +1,8 @@
 header
 {
+    background-color: #e6e6fa;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(230,230,250,1) 75%);
     text-align: center;
-    margin-bottom: 2rem;
-}
-
-/* Universal */
-.center-img
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%
 }
 
 /* id's */
@@ -19,6 +11,31 @@ header
     margin-top: 1rem;
     font-size:  24px;
 }
+
+#body-upper
+{
+    padding-top: 2rem;
+    background-color: #ffb6c1;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,182,193,0.6361044662005427) 50%, rgba(255,255,255,1) 100%);
+}
+
+#body-lower
+{
+    background-color: #add8e6;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(173,216,230,1) 50%);
+}
+
+
+/* Classes */
+.center-img
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%
+}
+
+
 
 /* Left Column */
 .left-col
