--- a/src/pages/assignments/htmlTohtml5/homework2.css
+++ b/src/pages/assignments/htmlTohtml5/homework2.css
@@ -81,6 +81,26 @@ td
     animation-play-state: running;
 }
 
+#movingBanner
+{
+    width: 350px;
+    height: 100px;
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    line-height: 100px;
+
+    position: relative;
+
+    animation-name: movingBannerAnim;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+}
+
 @keyframes fullTableAnim
 {
     from {
@@ -90,5 +110,18 @@ td
     to {
         background-color: green;
         color: white;
+    }
+}
+
+@keyframes movingBannerAnim
+{
+    from
+    {
+        left: 0;
+    }
+
+    to
+    {
+        left: calc(100% - 350px);
     }
 }
